--- a/config/lily58.conf
+++ b/config/lily58.conf
@@ -1,3 +1,6 @@
+# Update 10/11/2020 
+# State of The Firmware 3
+
 # Uncomment to enable encoder
 # CONFIG_EC11=y
 # CONFIG_EC11_TRIGGER_GLOBAL_THREAD=y
